cargo-features = ["profile-rustflags"]

[package]
name = "negl-nrf52840"
version = "0.1.0"
edition = "2021"

[package.metadata.rktk-cli]
mcu = "Nrf52840"

[dependencies]
rktk-drivers-nrf = { path = "../rktk/lib/rktk-drivers-nrf", default-features = false, features = [
  "nightly",
  "esb",
] }
rktk-drivers-common = { path = "../rktk/lib/rktk-drivers-common" }
rktk-keymanager = { path = "../rktk/lib/rktk-keymanager" }
rktk = { path = "../rktk/lib/rktk" }
rktk-log = { path = "../rktk/lib/rktk-log" }

embassy-embedded-hal = "0.3.0"
embassy-time = "0.4.0"
embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "nightly",
] }
embassy-nrf = { version = "0.3.0", features = [
  "gpiote",
  "time-driver-rtc1",
  "nrf52840",
  "nfc-pins-as-gpio",
] }
embassy-sync = { version = "0.6.0" }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3" }

once_cell = { version = "1.19.0", default-features = false, features = [
  "atomic-polyfill",
] }
ssd1306 = { version = "0.9.0" }
embedded-alloc = { version = "0.6.0", optional = true }
static_cell = "2.1.0"
log = { version = "0.4.25", optional = true }
defmt = { version = "0.3.10", optional = true }
postcard = "1.1.1"

[features]
default = ["defmt", "alloc"]

alloc = ["dep:embedded-alloc", "rktk/alloc"]
right = []
left = []
ble-split-master = []
ble-split-slave = []
force-slave = []

defmt = [
  "dep:defmt",
  "rktk/defmt",
  "rktk-log/defmt",
  "rktk-drivers-common/defmtusb",
  "rktk-drivers-common/defmt-timestamp",
  "rktk-drivers-nrf/defmt",
]
log = [
  "dep:log",
  "rktk/log",
  "rktk-log/log",
  "rktk-drivers-common/log",
  "rktk-drivers-nrf/log",
]
