cargo-features = ["profile-rustflags"]

[package]
name = "negl-nrf52840"
version = "0.1.0"
edition = "2021"

[dependencies]
rktk-drivers-nrf = { version = "0.1.0", features = ["nightly"] }
rktk-drivers-common = { version = "0.1.0" }
rktk = { version = "0.1.0" }
rktk-log = { version = "0.1.0" }

cortex-m = { version = "0.7.7" }
cortex-m-rt = { version = "0.7.3" }
embassy-embedded-hal = "0.3.0"
embassy-time = "0.4.0"
embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "nightly",
] }
embassy-nrf = { version = "0.3.0", features = [
  "gpiote",
  "time-driver-rtc1",
  "nrf52840",
  "nfc-pins-as-gpio",
] }
embassy-sync = { version = "0.6.0" }

once_cell = { version = "1.19.0", default-features = false, features = [
  "atomic-polyfill",
] }
static_cell = "2.1.0"
cfg-if = "1.0.0"

log = { version = "0.4.25", optional = true }
defmt = { version = "0.3.10", optional = true }

# alloc
embedded-alloc = { version = "0.6.0", optional = true }

# sd
nrf-softdevice = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice", features = [
  "critical-section-impl",
  "s140",
  "nrf52840",
], optional = true }

# trouble
rand_chacha = { version = "0.3", default-features = false, optional = true }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "e5dbb34d5509934490bf94e6eb466d7da8ce9ef4", version = "0.1.0", default-features = false, features = [
  "nrf52840",
], optional = true }

[patch.crates-io]
rktk = { path = "../../rktk/lib/rktk" }
rktk-drivers-common = { path = "../../rktk/lib/rktk-drivers-common/" }
rktk-drivers-nrf = { path = "../../rktk/lib/rktk-drivers-nrf/" }
rktk-log = { path = "../../rktk/lib/rktk-log" }

[features]
_check = ["trouble", "sd", "log", "left"]

default = ["defmt", "rrp", "alloc"]

alloc = ["dep:embedded-alloc", "rktk/alloc"]
right = []
left = []

rrp = ["rktk/rrp"]

defmt = [
  "dep:defmt",
  "rktk/defmt",
  "rktk-log/defmt",
  "rktk-drivers-common/defmt-usb",
  "rktk-drivers-common/defmt-timestamp",
  "rktk-drivers-nrf/defmt",
]
log = [
  "dep:log",
  "rktk/log",
  "rktk-log/log",
  "rktk-drivers-common/log",
  "rktk-drivers-nrf/log",
]

sd = ["rktk-drivers-nrf/softdevice-ble", "dep:nrf-softdevice"]

trouble = [
  "dep:rand_chacha",
  "dep:nrf-sdc",
  "rktk-drivers-nrf/sdc",
  "rktk-drivers-common/reporter-trouble",
]

cs-impl = ["cortex-m/critical-section-single-core"]
